@@ -47,14 +47,14 @@ How To
 
    .. __: args.html
 
-- `The Gamera C++ Image API`__: How to work with Gamera's images from C++.
+   - `The Gamera C++ Image API`__: How to work with Gamera's images from C++.
 
-.. __: image_api.html
+   .. __: image_api.html
 
-- `Writing Gamera toolkits`__: How to package your code in a
-  redistributable package that is easier to build. 
+   - `Writing Gamera toolkits`__: How to package your code in a
+     redistributable package that is easier to build. 
 
-.. __: writing_toolkits.html
+   .. __: writing_toolkits.html
 
 - `The Gamera GUI`__: How to use the integrated GUI.  Additionally,
   this describes how to train images.
